# chirho

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  publish_docs.yml  python-publish.yml  test.yml  test_notebooks.yml
causal_pyro/: __init__.py  primitives.py
causal_pyro/counterfactual/: __init__.py  conditioning.py  handlers.py  index_set.py  internals.py  multiworld.py  ops.py  selection.py  worlds.py
causal_pyro/dynamical/: dynamical_intro.ipynb  handlers.py  ops.py  sir_example.py
causal_pyro/indexed/: handlers.py  internals.py  ops.py
causal_pyro/interventional/: handlers.py  ops.py
causal_pyro/observational/: __init__.py  handlers.py  internals.py  ops.py
causal_pyro/probabilistic/: internals.py  ops.py
causal_pyro/query/: __init__.py  do_messenger.py  handlers.py  ops.py  predictive.py  query_notebook.ipynb  scribbles.py
causal_pyro/reparam/: __init__.py  dispatched_strategy.py  exogenize.py  soft_conditioning.py
chirho/: __init__.py  _pyro_patch.py
chirho/constrained/: __init__.py  internals.py  ops.py
chirho/counterfactual/: internals.py  ops.py
chirho/dynamical/: __init__.py  handlers.py  internals.py  ops.py
chirho/explainable/: constraints_experiment.ipynb  ops.py
chirho/indexed/: __init__.py  handlers.py  internals.py  ops.py
chirho/interpretable/: internals.py  ops.py
chirho/interventional/: __init__.py  handlers.py  ops.py
chirho/observational/: __init__.py  excised.py  handlers.py  internals.py  ops.py
chirho/probabilistic/: __init__.py  ops.py
chirho/robust/: __init__.py  functionals.py  internals.py  ops.py  utils.py
docs/: requirements.txt
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/source/: .~lock.smalltab.csv#  SrivatsanTrapnell2020.py  _config.yml  _toc.yml  acdefs.ipynb  actual_causality.ipynb  annotated_tutorial_i.ipynb  auto_dr_learner.ipynb  auto_dr_scratch.py  automated_dr_learner.ipynb  backdoor.ipynb  backdoor.md  causal_explanation.ipynb  cevae.ipynb  cevae.md  compas.ipynb  conf.py  conf_old.py  constrained.rst  counterfactual.md  counterfactual.rst  cramer_rao_flat.py  cramer_rao_robust.ipynb  debug_automated_dr_learner.ipynb  debug_gp_model.py  deepscm.ipynb  deepscm.md  delete.py  deterministic_condition.ipynb  dr_factor.ipynb  dr_learner.ipynb  dynamical.rst  dynamical_counterfactual.ipynb  dynamical_intro.ipynb  dynamical_mediation.ipynb  dynamical_multi.ipynb  dynamical_multilevel.ipynb  dynamical_slime.ipynb  dynamical_surrogates.ipynb  dynamics_backend_performance_comparison.ipynb  (+80 more)
examples/: README.txt  mediation.py
notebooks/source/: index.rst
sandbox/: mediation.py  personality.csv  testmw.py
scratch/: analytic_prior_eif.py  analytic_prior_if.py  error_vs_dimension.ipynb  intuitive_prior_eif_anim.py  mceif_data_sensitivity_missingness.ipynb  mceif_linearizes_pointwise_check.ipynb  mceif_simplified_sensitivity.ipynb  robust_memory_diagnostics.ipynb
scratch/utils/: build_svi_iter.py  build_zuko_guide.py  functional_factor_added.py  module_requires_grad.py  tabi_reparametrized_functional.py
scripts/: clean.sh  clean_notebooks.sh  format_notebooks.sh  lint.sh  lint_notebooks.sh  test.sh  test_notebooks.py  test_notebooks.sh
tests/: explanation_shapes_scribbles.py  test_conditioning.py  test_counterfactual.py  test_counterfactual_handler.py  test_do_messenger.py  test_index_set.py  test_internals.py  test_mediation.py  test_reparam.py  test_selection.py  test_soft_conditioning.py  test_worlds.py
tests/constrained/: test_handlers.py
tests/counterfactual/: test_ambiguity.py  test_counterfactual_handler.py  test_do_messenger.py  test_handlers_explanation.py  test_mediation.py  test_selection.py  test_stacking_BiasedPreemptions.py
(+1238 files in other folders)
